--- a/frontend/src/pages/ContactPage.module.css
+++ b/frontend/src/pages/ContactPage.module.css
@@ -1,6 +1,6 @@
 .contactPage {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   padding-top: 4rem;
   padding-bottom: 5rem;
@@ -10,7 +10,7 @@
   background: #ddf5d3;
   width: min(860px, 100% - 8rem);
   padding: 3rem 4rem 2.6rem;
-  margin-left: 70px;
+  margin: 0 auto;
 }
 
 .contactCard h1 {
